<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <include layout="@layout/loader"
        android:id="@+id/loader"/>

    <include layout="@layout/generic_toolbar"
        android:id="@+id/toolbar"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_personal_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="@dimen/dimen_24dp"
                android:text="@string/personal_information"
                android:textStyle="bold"
                />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_personal_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_personal_info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="@dimen/dimen_24dp"
                android:layout_marginEnd="@dimen/dimen_24dp"
                android:layout_marginTop="@dimen/dimen_16dp"
                app:cardCornerRadius="@dimen/dimen_8dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/cl_content">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_birth_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_margin="@dimen/dimen_16dp"
                        android:text="@string/birth_year"
                        android:textStyle="bold"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_bith_year_value"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toEndOf="@id/tv_birth_year"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_margin="@dimen/dimen_16dp"
                        tools:text="@string/birth_year"
                        android:textAlignment="textEnd" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_height"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/tv_birth_year"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_margin="@dimen/dimen_16dp"
                        android:text="@string/height"
                        android:textStyle="bold"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_height_value"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toEndOf="@id/tv_birth_year"
                        app:layout_constraintTop_toBottomOf="@id/tv_bith_year_value"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_margin="@dimen/dimen_16dp"
                        tools:text="@string/height_cm_in"
                        android:textAlignment="textEnd" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_demographic_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/cv_personal_info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="@dimen/dimen_24dp"
                android:text="@string/demographic_information"
                android:textStyle="bold"
                />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_demographic_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_demographic_info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="@dimen/dimen_24dp"
                android:layout_marginEnd="@dimen/dimen_24dp"
                android:layout_marginTop="@dimen/dimen_16dp"
                app:cardCornerRadius="@dimen/dimen_8dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_planet_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_margin="@dimen/dimen_16dp"
                        android:text="@string/planet"
                        android:textStyle="bold"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_planet_name_value"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toEndOf="@id/tv_planet_name"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_margin="@dimen/dimen_16dp"
                        tools:text="@string/planet"
                        android:textAlignment="textEnd" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_planet_population"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/tv_planet_name"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_margin="@dimen/dimen_16dp"
                        android:text="@string/population"
                        android:textStyle="bold"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_planet_population_value"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toEndOf="@id/tv_planet_population"
                        app:layout_constraintTop_toBottomOf="@id/tv_planet_name_value"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_margin="@dimen/dimen_16dp"
                        tools:text="@string/population"
                        android:textAlignment="textEnd"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_species_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/tv_planet_population"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_margin="@dimen/dimen_16dp"
                        android:text="@string/species"
                        android:textStyle="bold"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_species_name_value"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toEndOf="@id/tv_species_name"
                        app:layout_constraintTop_toBottomOf="@id/tv_planet_population_value"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_margin="@dimen/dimen_16dp"
                        tools:text="@string/planet"
                        android:textAlignment="textEnd" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_species_language"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/tv_species_name"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_margin="@dimen/dimen_16dp"
                        android:text="@string/language"
                        android:textStyle="bold"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_species_language_value"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toEndOf="@id/tv_species_language"
                        app:layout_constraintTop_toBottomOf="@id/tv_species_name_value"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_margin="@dimen/dimen_16dp"
                        tools:text="@string/population"
                        android:textAlignment="textEnd"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_films_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/cv_demographic_info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="@dimen/dimen_24dp"
                android:text="@string/films_participation"
                android:textStyle="bold"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_films"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_films_info"
                app:layout_constraintStart_toStartOf="@id/tv_films_info"
                app:layout_constraintEnd_toEndOf="@id/tv_films_info"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:layout_marginBottom="@dimen/dimen_24dp"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>