<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <include layout="@layout/loader"
        android:id="@+id/loader"/>

    <androidx.appcompat.widget.SearchView
        android:id="@+id/sv_character"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:queryHint="@string/search_bar_hint"
        android:layout_margin="@dimen/dimen_24dp"
        app:iconifiedByDefault="false"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_search_results"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/sv_character"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:itemCount="5"
        tools:listitem="@layout/item_character"
        android:layout_marginTop="@dimen/dimen_16dp" />

    <LinearLayout
        android:id="@+id/ll_no_results"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sv_character"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimen_8dp">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="250dp"
            android:layout_height="250dp"
            app:lottie_rawRes="@raw/target_computer"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>

        <TextView
            android:id="@+id/tv_no_results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/use_the_search_bar_to_look_for_your_favorite_character"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:layout_marginStart="@dimen/dimen_24dp"
            android:layout_marginEnd="@dimen/dimen_24dp"
            android:textStyle="bold"
            />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/flt_favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/dimen_24dp"
        android:src="@drawable/ic_star_filled"
        android:contentDescription="@string/your_favorites" />

</androidx.constraintlayout.widget.ConstraintLayout>